--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #ff512f, #dd2476);
+  background: linear-gradient(90deg, #9de1f7, #5b63d2, #463e92);
   display: flex;
   justify-content: center;
   align-items: center;
