--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, #9de1f7, #5b63d2, #463e92);
+  background: linear-gradient(135deg, #0b0c2a, #000080, #ff9800);
   display: flex;
   justify-content: center;
   align-items: center;
