--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ nav ul li a.active {
 
 /* ===== HERO BUTTON ===== */
 .hero-text .btn {
-  background: linear-gradient(135deg, #FFF1DE, #f59e0b);
+  background: (90deg, #FFF1DE, #f59e0b);
   color: #ff9800;
   padding: 12px 30px;
   text-decoration: none;
