--- a/style.css
+++ b/style.css
@@ -160,11 +160,14 @@ nav .logo span {
   color: #ff9800;
 }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 30px;
+@media(max-width: 768px) {
+  nav ul { 
+    flex-direction: column; 
+    gap: 15px; 
+    margin-top: 10px;
+  }
 }
+
 
 nav ul li a {
   text-decoration: none;
@@ -277,7 +280,7 @@ nav ul li a.active {
 }
 
 .about-img img {
-  max-width: 320px;
+  max-width: 280px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   animation: zoomInOut 3s ease-in-out infinite;
@@ -513,6 +516,7 @@ nav ul li a.active {
   text-align: center;
   position: absolute;
   top: 50%; left: 50%;
+  opacity: 0;
   transform: translate(-50%, -50%) scale(0.9);
   transition: all 0.3s ease;
   animation: popUp 0.3s ease;
@@ -763,11 +767,13 @@ nav ul li a.active {
     margin-bottom: 20px;
   }
 
-  .footer-right {
-    justify-content: center;
-    text-align: center;
+  @media(max-width: 576px) {
+  .footer-right { 
+    flex-direction: column; 
+    gap: 20px; 
+    align-items: center; 
   }
-
+}
   .footer-col ul li a,
   .footer-col ul li span {
     justify-content: center;
