--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ nav ul li a.active {
   top: 0;
   left: 0;
   width: 100%;
-  height: 200px; /* The height of the image */
+  height: 200px;
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
   display: flex;
@@ -460,13 +460,14 @@ nav ul li a.active {
   opacity: 0;
   transition: opacity 0.4s ease;
   border-radius: 12px 12px 0 0;
+  pointer-events: none; /* This is the fix! */
 }
 
 .portfolio-item:hover::before {
   opacity: 1;
 }
 
-/* We don't need these since we are using ::before pseudo-element */
+/* We don't need these since we are using::before pseudo-element */
 .thumbnail,
 .hover-text,
 .portfolio-item .overlay {
